# scholar2sql

./: .gitignore  README.md  pyproject.toml  template_config.yaml
examples/: README.md  brain_expression.yaml  ic_drug.yaml
images/: literature_search.drawio  literature_with_sources.drawio  pdf_extractor.drawio  screening_review.drawio
src/scholar2sql/: config.py  metadata.py  schema.py  sql.py
src/scholar2sql/llm/: __init__.py  example.py  openai.py  prompt.py
src/scholar2sql/scholar/: grobid.py  pubmed.py  scholar.py
src/scholar2sql/scripts/: load_settings.py  reset_sql_table.py  run.py
template/: ic_drug.yaml
